--- a/sections/3_solucao.tex
+++ b/sections/3_solucao.tex
@@ -128,3 +128,9 @@ Para tal, a solução encontrada foi a implementação de duas funções de midd
     \caption{Workflow da autenticação de pedidos à API de dados.}
     \label{fig:flow_authCC}
 \end{figure}
+
+\cleardoublepage
+\section{Gestão de utilizadores}
+
+\cleardoublepage
+\section{Métrica da plataforma}
